--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "body-scroll-lock": "^4.0.0-beta.0",
     "next": "12.0.4",
     "rc-slider": "^9.7.4",
