--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-simple-star-rating": "^4.0.0",
     "react-slick": "^0.28.1",
     "sass": "1.26.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14"
   }
 }
