--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
+    "react-hot-toast": "^2.4.1",
     "react-rating-stars-component": "^2.2.0",
     "react-simple-star-rating": "^4.0.0",
     "react-slick": "^0.28.1",
