--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^1.7.7",
     "body-scroll-lock": "^4.0.0-beta.0",
+    "dotenv": "^16.4.5",
     "next": "12.0.4",
     "rc-slider": "^9.7.4",
     "react": "^17.0.2",
