--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "axios": "^1.7.7",
     "body-scroll-lock": "^4.0.0-beta.0",
     "dotenv": "^16.4.5",
-    "next": "12.0.4",
+    "framer-motion": "^11.9.0",
+    "next": "^12.3.4",
     "rc-slider": "^9.7.4",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-dropdown": "^1.9.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-dropdown": "^1.11.0",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.13.1",
     "react-rating-stars-component": "^2.2.0",
     "react-simple-star-rating": "^4.0.0",
     "react-slick": "^0.28.1",
