--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.7.7",
     "body-scroll-lock": "^4.0.0-beta.0",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.9.0",
     "next": "^12.3.4",
     "rc-slider": "^9.7.4",
     "react": "^18.3.1",
@@ -19,6 +20,7 @@
     "react-intersection-observer": "^9.13.1",
     "react-rating-stars-component": "^2.2.0",
     "react-simple-star-rating": "^4.0.0",
+    "react-slick": "^0.30.2",
     "sass": "1.26.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
