--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "dotenv": "^16.4.5",
     "framer-motion": "^11.9.0",
     "next": "^12.3.4",
+    "next-transpile-modules": "^10.0.1",
+    "pdfjs-dist": "^4.6.82",
     "rc-slider": "^9.7.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropdown": "^1.11.0",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.13.1",
+    "react-pageflip": "^2.0.3",
     "react-rating-stars-component": "^2.2.0",
     "react-simple-star-rating": "^4.0.0",
     "react-slick": "^0.30.2",
