--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-google-maps/api": "^2.20.3",
     "axios": "^1.7.7",
     "body-scroll-lock": "^4.0.0-beta.0",
     "dotenv": "^16.4.5",
+    "flowbite-react": "^0.10.2",
     "framer-motion": "^11.9.0",
     "next": "^12.3.4",
     "next-transpile-modules": "^10.0.1",
@@ -24,8 +29,14 @@
     "react-rating-stars-component": "^2.2.0",
     "react-simple-star-rating": "^4.0.0",
     "react-slick": "^0.30.2",
+    "react-vertical-timeline-component": "^3.6.0",
     "sass": "1.26.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14"
   }
 }
