--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-google-maps/api": "^2.20.3",
+    "antd": "^5.21.6",
     "axios": "^1.7.7",
     "body-scroll-lock": "^4.0.0-beta.0",
     "dotenv": "^16.4.5",
