--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropdown": "^1.11.0",
+    "react-facebook-pixel": "^1.0.4",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.13.1",
     "react-pageflip": "^2.0.3",
