--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_KEY="https://api.wakeup-cosmetics.tn/"
-NEXT_PUBLIC_LOCAL="https://api.wakeup-cosmetics.tn/"
+NEXT_PUBLIC_API_KEY="http://localhost:7000/"
+NEXT_PUBLIC_LOCAL="http://localhost:7000/"
 NEXT_PUBLIC_HOST="https://wakeup-server.onrender.com/"
 NEXT_PUBLIC_KEY="AIzaSyD-1X6JQJ3Q"
