--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
           context: .
           push: true
           tags: |
-            leadersdigital/wakeup-client:latest
+            bangov2/wakeup-client:latest
       
       - name: Deploy to server
         uses: appleboy/ssh-action@master
@@ -47,7 +47,7 @@ jobs:
             
             services:
               wakeup-frontend:
-                image: leadersdigital/wakeup-client:latest
+                image: bangov2/wakeup-client:latest
                 container_name: wakeup-client
                 ports:
                   - "3208:3000"
